--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
@@ -44,6 +45,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {},
+  "devDependencies": {
+    "prop-types": "^15.7.2"
+  },
   "proxy": "http://localhost:3001"
 }
