--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
